--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "react-tooltip": "^4.2.21",
     "redux": "^4.1.2",
     "redux-axios-middleware": "^4.0.1",
     "redux-thunk": "^2.4.1",
@@ -56,6 +57,7 @@
     "@babel/preset-react": "^7.16.7",
     "@types/node-sass": "^4.11.2",
     "@types/react-router-dom": "^5.3.3",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.6.0",
     "css-modules-typescript-loader": "^4.0.1",
