--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-tooltip": "^4.2.21",
     "redux": "^4.1.2",
