--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "redux": "^4.1.2",
     "redux-axios-middleware": "^4.0.1",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "reselect": "^4.1.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
